--- a/todo_list/todo/templates/todo/task.html
+++ b/todo_list/todo/templates/todo/task.html
@@ -1,5 +1,9 @@
-<form action="{% url 'task' task_id %}" method="POST">
+<h1>Task: {{ task }}</h1>
+
+
+
+{% comment %} <form action="{% url 'task' task_id %}" method="POST">
     {% csrf_token %} {{ form }}
     <input type="submit" name="save" value="Save" />
     <input type="submit" name="delete" value="Delete" />
-</form>
+</form> {% endcomment %}
