--- a/todo_list/todo/templates/todo/task_list.html
+++ b/todo_list/todo/templates/todo/task_list.html
@@ -1,12 +1,12 @@
 {% if request.user.is_authenticated %}
     <p>{{request.user}}</p>
-    <a href="">Logout</a>
+    <a href="{% url 'logout' %}">Logout</a>
 {% else %}
-    <a href="">Login</a>
+    <a href="{% url 'login' %}">Login</a>
 {% endif %}
 
 <hr>
-<h1>To Do List</h1>
+<h1>To Do List:</h1>
 <a href="{% url 'task-create' %}">Add Task</a>
 
 <table>
