--- a/todo_list/todo/templates/todo/task_confirm_delete.html
+++ b/todo_list/todo/templates/todo/task_confirm_delete.html
@@ -1,6 +1,20 @@
-<a href="{%url 'list' %}">Go Back</a>
-<form method="POST">
-    {% csrf_token %}
-    <p>Are you sure you want to delete this task? "{{ task }}"</p>
-    <input type="submit" value="Delete"/>
-</form>
+{% extends 'main.html' %}
+{% load static %}
+
+{% block content %}
+<div class="container">
+    <div class="card-header">
+        <div class="sub-header">
+            <h2>Delete Task</h2>
+            <a href="{% url 'list' %}" class="back"><span class="circle">&#8678;</span> Back</a>
+        </div>
+    </div>
+    <div class="card">
+        <form method="POST">
+            {% csrf_token %}
+            <p>Are you sure you want to delete this task?</br></br><strong>"{{ task }}"</strong></p></br>
+            <input class="button" type="submit" value="Delete"/>
+        </form>
+    </div>
+</div>
+{% endblock %}
