--- a/todo_list/todo/templates/todo/task.html
+++ b/todo_list/todo/templates/todo/task.html
@@ -1,9 +1,15 @@
-<h1>Task: {{ task }}</h1>
+{% extends 'main.html' %}
+{% load static %}
 
-
-
-{% comment %} <form action="{% url 'task' task_id %}" method="POST">
-    {% csrf_token %} {{ form }}
-    <input type="submit" name="save" value="Save" />
-    <input type="submit" name="delete" value="Delete" />
-</form> {% endcomment %}
+{% block content %}
+<div class="container">
+    <div class="card-header">
+        <h2>Task:  {{ task }}</h2>
+    </div>
+    <div class="card">
+        <p>{{ task.description }}</p>
+        </br>
+        <a class="button" href="{% url 'list' %}">Back</a>
+    </div>
+</div>
+{% endblock %}
